# Midnight-GPT

./: README.md
api/: main.py
front/: package.json
front/src/app/: globals.css  layout.tsx  page.tsx
server/: .gitignore  CMakeLists.txt  arm64-osx-dynamic.cmake
server/src/: main.cpp
server/src/helper/: request.cpp  request.h
server/src/nn/tokenizer/: char_tokenizer.cpp  char_tokenizer.h
training/: .gitignore  char_tokenizer.py  chunk.py  convert_to_pt.py  demo_gpt.py  feed_forward.py  generate.py  helper.py  inference.py  main.py  multi_head_attention.py  optuna.py  publish_huggingface.py  requirements.txt  token_id_dataset.py  train.py  train_tokenizer.py  training[brwac].py  training[cc].py  training[mix].py  training[wikipedia].py  transformer_block.py
training/callbacks/: save_best_model.py  text_generation.py  token_counter.py
training/checkpoints/optuna/: best_params_1775406019891.jsonl
training/checkpoints/tokenizer/: tokenizer_20250504_174242.json  tokenizer_20250504_174325.json  tokenizer_20250508_142639.json  tokenizer_20250508_145309.json
training/config/: global_configuration.yaml
training/data-pipeline/: download[brwac].py  download[cc].py  download[finepdf].py  download[wikipedia].py  tokenize[brwac].py  tokenize[finepdf].py  tokenize[wikipedia].py
training/mlruns/0/: meta.yaml
training/model/architecture/: __init__.py  attention_head.py  midnight_gpt.py  multi_head_attention.py  transformer_block.py
training/training_pipeline/callbacks/: __init__.py  text_generation.py  (+1 more)
training/utils/: checkpoint.py  configuration.py
(+8 files in other folders)
